[gd_scene load_steps=14 format=2]

[ext_resource path="res://CollectionPanel.gd" type="Script" id=1]
[ext_resource path="res://Assets/art/ninepatch.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/Comfortaa-Bold.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Data/Utils/CustomTween2.gd" type="Script" id=8]
[ext_resource path="res://Assets/GUI/arrow_right_off.png" type="Texture" id=9]
[ext_resource path="res://Assets/GUI/arrow_right_on.png" type="Texture" id=10]
[ext_resource path="res://Assets/GUI/arrow_right_hover.png" type="Texture" id=11]
[ext_resource path="res://Assets/GUI/arrow_left_off.png" type="Texture" id=12]
[ext_resource path="res://Assets/GUI/arrow_left_on.png" type="Texture" id=13]
[ext_resource path="res://Assets/GUI/arrow_left_hover.png" type="Texture" id=14]
[ext_resource path="res://Data/GUI/GUIPanels/CollectionPanelCollider.gd" type="Script" id=15]
[ext_resource path="res://Data/GUI/GUIPanels/CollectionContainer.gd" type="Script" id=16]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 7 )

[node name="CollectionPanel" type="NinePatchRect"]
margin_right = 425.0
margin_bottom = 475.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 300, 300 )
rect_pivot_offset = Vector2( 212.5, 237.5 )
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 300, 300 )
patch_margin_left = 65
patch_margin_top = 60
patch_margin_right = 100
patch_margin_bottom = 120
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollectionPanelCollider" type="Area2D" parent="."]
z_index = 6
script = ExtResource( 15 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CollectionPanelCollider"]
polygon = PoolVector2Array( 15, 45, 65, 0, 425, 0, 425, 475, 0, 475, 0, 385, 15, 370 )

[node name="CollectionContainer" type="ScrollContainer" parent="."]
margin_left = 50.0
margin_top = 40.0
margin_right = 423.0
margin_bottom = 455.0
rect_min_size = Vector2( 304, 0 )
mouse_filter = 1
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CollectionContainer"]
margin_right = 373.0
margin_bottom = 415.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="CollectionContainer/HBoxContainer"]
margin_right = 349.0
margin_bottom = 415.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightMargin" type="Control" parent="CollectionContainer/HBoxContainer"]
margin_left = 353.0
margin_right = 373.0
margin_bottom = 415.0
rect_min_size = Vector2( 20, 0 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.2
anchor_right = 0.7
margin_top = 5.0
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.823529, 0.823529, 0.447059, 1 )
text = "Construction Panel"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HideButton" type="TextureButton" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -54.6882
margin_right = 18.0
margin_bottom = -30.6882
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShowButton" type="TextureButton" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -54.6882
margin_right = 18.0
margin_bottom = -30.6882
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SlideTween" type="Tween" parent="."]
script = ExtResource( 8 )
[connection signal="resized" from="." to="." method="_on_CollectionPanel_resized"]
[connection signal="texture_changed" from="." to="." method="_on_CollectionPanel_texture_changed"]
[connection signal="newRecordSelected" from="CollectionContainer" to="." method="_on_CollectionContainer_newRecordSelected"]
[connection signal="pressed" from="HideButton" to="." method="_on_HideButton_pressed"]
[connection signal="pressed" from="ShowButton" to="." method="_on_ShowButton_pressed"]
[connection signal="tween_completed" from="SlideTween" to="." method="_on_SlideTween_completed"]
